--- a/report/citations.bib
+++ b/report/citations.bib
@@ -360,3 +360,26 @@
 	title = {Refraction Picture},
 	howpublished = "\url{http://4.bp.blogspot.com/-Y4zXYZDJekI/Ud5C-rzi_0I/AAAAAAAACSc/EYYxL9cmy3M/s1600/Picture18.png}"
 }
+@MISC{lidarsum,
+	title = {LIDAR-Lite datasheet},
+	howpublished = "\url{http://kb.pulsedlight3d.com/helpdesk/attachments/5007466446}"
+}
+
+@MISC{spreadofbeam,
+	title={What is the spread of the laser beam?},
+	month = may,
+	year = {2015},
+	howpublished = "\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000566352-what-is-the-spread-of-the-laser-beam-}"
+}
+
+@MISC{multiplereflections,
+	title={Processing Multiple Reflections},
+	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000549530-processing-multiple-reflections}"
+}
+
+@MISC{howtopulse,
+	title={Technology and System Hardware Overview},
+	month = feb,
+	year = {2015},
+	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548635-technology-and-system-hardware-overview}"
+}
