--- a/report/citations.bib
+++ b/report/citations.bib
@@ -383,3 +383,10 @@
 	year = {2015},
 	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000548635-technology-and-system-hardware-overview}"
 }
+
+@MISC{reprate,
+	title = {How can I get faster acquisition than 50Hz?},
+	month = mar,
+	year = {2015},
+	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000583786-how-can-i-get-faster-acquisition-than-50hz-}
+}
