--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -29,17 +29,14 @@ The sensor detection criteria may be selected to pick the nearer signal, the mor
 
 A reference signal fed from the transmitter prior to the distance measurement and a received pulse reflected from the target. The time delay between these two stored signals is estimated through a signal processing approach known as \textit{correlation}, which effectively provides a signature match between these two closely related signals. This accurately calculates the time delay, which is translated into distance based on the known speed-of-light~\cite{howtopulse}.
 
-By default the sensor runs about 50 Hz (give or take depending on reflected signal strength and distance). Sometimes you may want it to read faster. 100Hz is about the max you can get out of the sensor without sacrificing too much accuracy.
-Decrease the max-acquisition count (register 0x02). By default register 0x02 is 0x80, if you decrease this the maximum number of acquisitions the sensor can take and use to get a reading will decrease. As this decreases accuracy will also decrease.
-%TODO:ref{http://kb.pulsedlight3d.com/support/solutions/articles/5000583786-how-can-i-get-faster-acquisition-than-50hz-}
+By default the sensor runs about 50 Hz (could vary given the signal strength and distance). To optimize the rep rate, it is possible to decrease the max-acquisition count (on register 0x02). By default register 0x02 is 0x80, if you decrease this the maximum number of acquisitions the sensor can take and use to get a reading will decrease\cite{reprate}.
 
-The advantage for powering down the preamp between measurements is reduced power consumption and less thermal rise above ambient temperature when operating at low pulse rates 1-10 Hz
-
+\pagebreak
 The assembling of the laser happened in the following way:
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[scale=.4]{images/laderraspberryconnection.png}
+	\includegraphics[scale=.3]{images/laderraspberryconnection.png}
 	\caption{The pinout and wiring of the LIDAR and Raspberry Pi}
 	\label{fig:wiringlidarpi}
 \end{figure}
@@ -54,14 +51,30 @@ The assembling of the laser happened in the following way:
 		4 & SCL & Green \\ \hline
 		3 & SDA & Blue \\ \hline
 	\end{tabular}
-	\caption{Raspberry pins mapped to the LIDAR pins}
+	\caption{The pins of the microcontroller mapped to the laser pins}
 \end{table}
-%Can be interfaced through I2C and PWM.
+
+The laser can be interfaced through I2C or PWM~\cite{lidarsum}. The default I2C address for the laser is 0x62, which we could validate by running:
+\lstset{language=sh}
+\begin{lstlisting}
+	>>	sudo i2cdetect -y 1
+	>>
+		  0  1  2  3  4  5  6  7  8  9  a  b  c  d  e  f
+		  00:          -- -- -- -- -- -- -- -- -- -- -- -- --
+		  10: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+		  20: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+		  30: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+		  40: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+		  50: -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- --
+		  60: -- -- 62 -- -- -- -- -- -- -- -- -- -- -- -- --
+		  70: -- -- -- -- -- -- -- -- 
+\end{lstlisting}
+
 We started using a library called lidarLite, which provides a simple C interface to the LIDAR on a Raspberry. It is based on the WiringPi interface, which is a GPIO access library written in C for the BCM2835 SoC used in the Raspberry Pi. It is usable from C and C++ and many other languages with suitable wrappers. It was designed very familiarly to Arduino's wiring library.
 
 With the lidarLite library, we managed to set up a connection using the I2C protocol. By enabling the built in I2C support in the Raspberry Pi kernel, and after the wiring of the components, a connection has been set up between the LIDAR laser and the controller.
 
-The default I2C address for the laser is 0x62.
+
 
 %https://learn.adafruit.com/adafruits-raspberry-pi-lesson-4-gpio-setup/configuring-i2c
 %https://github.com/answer17/lidarLite
@@ -106,7 +119,7 @@ This proved ineffective, since the rotation and measurements were independent of
 
 Then we attempted to controll the stepper-motor with the Pi, in the same code as we were running the laser. However, the wiringPi library required root privileges, and ROS cannot be run with root privileges easily. The solution was to use a system call library to call some external code which would drive the stepper-motor. This makes the stepping and measuring synchronous, but making system call is very expensive, meaning the code is significantly slower that the top speed of the laser.
 
-\lstinputlisting[firstline=1, lastline=, title=mainCode, language=C++]{../code/laser_scan_publisher_tutorial/src/laser_scan_publisher.cpp}
+\lstinputlisting[firstline=55, lastline=109, title=mainCode.cpp, language=C++]{../code/laser_scan_publisher_tutorial/src/laser_scan_publisher.cpp}
 
-\lstinputlisting[firstline=1, lastline=16, title=gpioWrapper, language=shell]{../code/gpioThing.sh}
+\lstinputlisting[firstline=1, lastline=16, title=gpioWrapper, language=sh]{../code/gpioThing.sh}
 The only purpose of this code is to be called from the main file. The gpio utility is capable of interfacing with the GPIO pins on the Pi without root privileges. The change from low to high causes a micro-step, and 8 micro-steps make one full step.
