Added more to laser

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -390,3 +390,15 @@
 	year = {2015},
 	howpublished="\url{http://kb.pulsedlight3d.com/support/solutions/articles/5000583786-how-can-i-get-faster-acquisition-than-50hz-}
 }
+
+@MISC{i2csetup,
+	title={Configuring I2C},
+	month = may,
+	year = {2015},
+	howpublished="\url{https://learn.adafruit.com/adafruits-raspberry-pi-lesson-4-gpio-setup/configuring-i2c}"
+}
+
+@MISC{lidarlib,
+	title={lidarLite GitHub repository},
+	howpublished="\url{https://github.com/answer17/lidarLite}"
+}
