--- a/report/sections/ch4-stepper.tex
+++ b/report/sections/ch4-stepper.tex
@@ -4,11 +4,15 @@ Stepper motors are electrical motors that can be precisely controlled. They divi
 
 Stepper motors are usually used with a specific circuit to control them, a stepper-motor controller. Stepper-motor controllers allow for microstepping, which further divides a step into smaller pieces. We used 8 micro-steps per step
 
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.5]{images/steppermotor.png}
+	\caption{Gustavo will write here}
+	\label{fig:steppermotor}
+\end{figure}
+
 The stepper motor we used in our project is NEMA-17 Bipolar Stepper Motor. \cite{steppermotor}
 The stepper motor controller we used is an EasyDriver.\cite{steppercontroller}
-
-(Image: how we connected the stepper motor, the Pi, and its controller)
-(Image: how we connected to arduino)
 
 \lstinputlisting[firstline=1, lastline=20, title=Arduino\_Code, language=C++]{../code/arduino_code}
 
