commiting my part

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -75,6 +75,8 @@
 
 \input{sections/ch4-stepper.tex}
 
+\input{sections/ch4-hector.tex}
+
 \input{sections/ch4-setting-up-mapping}
 
 %Chapter 5  -----------
