--- a/report/sections/ch4-stepper.tex
+++ b/report/sections/ch4-stepper.tex
@@ -10,7 +10,7 @@ The stepper motor controller we used is an EasyDriver.\cite{steppercontroller}
 (Image: how we connected the stepper motor, the Pi, and its controller)
 (Image: how we connected to arduino)
 
-\lstinputlisting[firstline=1, lastline=20, title=Arduino\_Code, language=C++]{../code/arduino_code}
+%\lstinputlisting[firstline=1, lastline=20, title=Arduino\_Code, language=C++]{../code/arduino_code}
 
 Since the stepper motor we use divides a full cycle into 200 steps, this means that the resulustion is 1.8 degrees per step. At a dictance of 1m, 1.8degrees can resolve a distance of ~3.1cm, and this increases linearly with a larger distance.
 
