Added references, spellchecked, looks great

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -402,3 +402,24 @@
 	title={lidarLite GitHub repository},
 	howpublished="\url{https://github.com/answer17/lidarLite}"
 }
+
+@MISC{raspispecs,
+	title={Raspberry Pi specifications},
+	howpublished="\url{https://www.raspberrypi.org/products/raspberry-pi-2-model-b}"
+}
+@MISC{raspiinstall,
+	title={Raspberry Pi installation},
+	howpublished="\url{https://www.raspberrypi.org/documentation/installation/installing-images/README.md}"
+}
+@MISC{indigoins,
+	title={ROS - Installation of Indigo},
+	howpublished="\url{http://wiki.ros.org/indigo/Installation/Source}"
+}
+@MISC{ubuntuins,
+	title={Ubuntu ARM - Installation},
+	howpublished="\url{http://www.ubuntu.com/download/server/arm}"
+}
+@MISC{ubuntuROS,
+	title={Ubuntu ARM - Installation},
+	howpublished="\url{http://wiki.ros.org/indigo/Installation/UbuntuARM}"
+}
