Spell-checked, added cites

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -423,3 +423,8 @@
 	title={Ubuntu ARM - Installation},
 	howpublished="\url{http://wiki.ros.org/indigo/Installation/UbuntuARM}"
 }
+
+@MISC{slipringhow,
+	title={How a slipring works},
+	howpublished="\url{http://www.electro-miniatures.com/HowSlipRingWorks.shtml}"
+}
