--- a/report/sections/ch4-slipring.tex
+++ b/report/sections/ch4-slipring.tex
@@ -1,16 +1,11 @@
 \clearpage
 \section{Slipring}
 
-To allow the Lidar to continuously rotate and take measurements, a slip ring is needed to avoid issues with the cables breaking or getting stuck. 
+To allow the Lidar to continuously rotate and take measurements, a slip ring is needed to avoid issues with the cables breaking or getting tangled. which then results in damaging the equipment. 
 The slip ring used for this build is a SNM022A-06\cite{slipring}, which is a 6-wire slipring that supports up to 210DC/240AC. 
 
-The slip ring allows the transfer of electrical signal from a stationary object to a rotating object. The center of the slip ring remains stationary as the surrounding housing rotates conducting brushes along the centre core in separate lanes, which then transfers the electrical signal.
-The specific slip ring used has 6 lanes on the core, since the slip ring is compatible up to 6 wires. Between the lanes a high resistance insulation is put in place to avoid short circuits and signal interference between the wires. 
-
-Slip rings are often used in electrical generators, in cable reels and wind turbines. 
+The slip ring allows the transfer of electrical signal from a stationary object to a rotating object. The center of the slip ring remains stationary as the surrounding housing rotates, in our case 6, conducting brushes along the centre core in separate lanes, which then transfers the electrical signal.
+The specific slip ring used has 6 lanes on the core, since the slip ring is compatible up to 6 wires. Between each of the lanes a high resistance insulation is put into place to avoid short circuits and signal interference between the wires.\cite{slipringhow} \\
+Slip rings are often used in electrical generators, in cable reels and wind turbines.
 
 %TODO insert picture of slipring build~
-%http://www.electro-miniatures.com/HowSlipRingWorks.shtml
-%http://www.uea-inc.com/products/slip-rings/how-a-slip-ring-works
-
-%The slip ring is mounted on the 3d-printed Lidar enclosure together with a cogwheel. This enables issue-less $360\deg$ rotation. 
