--- a/report/citations.bib
+++ b/report/citations.bib
@@ -428,3 +428,18 @@
 	title={How a slipring works},
 	howpublished="\url{http://www.electro-miniatures.com/HowSlipRingWorks.shtml}"
 }
+
+@MISC{hectormapping,
+	title={Hector Mapping},
+	howpublished="\url{http://wiki.ros.org/hector_mapping}"
+}
+
+@MISC{tfrobot,
+	title={Transform points on a robot},
+	howpublished="\url{http://wiki.ros.org/hector_slam/Tutorials/SettingUpForYourRobot}"
+}
+
+@MISC{rviz,
+	title={Information on RVIZ},
+	howpublished="\url{http://wiki.ros.org/rviz}"
+}
